# gainer-predator-v4

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  analyze_trade.py  bot.py  deploy.sh  requirements.txt  settings.json  telegram_responses.md  test_ws.py
.agent/skills/binance-futures-expert/: SKILL.md
.agent/skills/skill-antigravity/: SKILL.md  metadata.json
autoresearch/: engine.py  history.py  hypothesis.py  scoring.py
dashboard/: components.json  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ActivePositions.tsx  EquityCurve.tsx  ExperimentPanel.tsx  Header.tsx  HourHeatmap.tsx  LiveTradeLog.tsx  MetricsGrid.tsx  TradesTable.tsx
dashboard/src/hooks/: usePolling.ts  useSSE.ts
dashboard/src/lib/: api.ts  utils.ts
src/: binance.rs  config.rs  http_api.rs  lib.rs  main.rs  models.rs  parser.rs  runtime_config.rs  scanner.rs  trade_logger.rs
