[package]
name = "trz_bot"
version = "0.3.0"
edition = "2021"
default-run = "trz_bot"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.9"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.29"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
dashmap = "6.1.0"
mimalloc = { version = "0.1.43", default-features = false }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
